--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "walmart-test-server",
+  "name": "eddie-test-server",
   "version": "1.0.0",
   "description": "",
   "main": "api/server.js",
